Fix headings on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,21 +50,32 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 60pt;
   color: transparent;
   background: linear-gradient(125deg, var(--theme-green) 0%, var(--theme-green-alt) 100%);
   -webkit-background-clip: text;
 }
 
 h2 {
-  font-size: 48pt;
   color: var(--theme-green);
 }
 
-h3 {font-size: 40pt;}
-h4 {font-size: 32pt;}
-h5 {font-size: 24pt;}
-h6 {font-size: 18pt;}
+@media screen and (min-width: 701px) {
+  h1 {font-size: 60pt;}
+  h2 {font-size: 48pt;}
+  h3 {font-size: 40pt;}
+  h4 {font-size: 32pt;}
+  h5 {font-size: 24pt;}
+  h6 {font-size: 18pt;}
+}
+
+@media screen and (max-width: 700px) {
+  h1 {font-size: 15vw;}
+  h2 {font-size: 12vw;}
+  h3 {font-size: 10vw;}
+  h4 {font-size: 8vw;}
+  h5 {font-size: 6vw;}
+  h6 {font-size: 4.5vw;}
+}
 
 /* Fixes */
 
